Convert all container builds to multi-stage. Add JVM containers for comparison.